; ModuleID = '/home/carl/AnghaBench/linux/drivers/watchdog/extr_ebc-c384_wdt.c_ebc_c384_wdt_set_timeout.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/watchdog/extr_ebc-c384_wdt.c_ebc_c384_wdt_set_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.watchdog_device = type { i32 }

@CFG_ADDR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.watchdog_device*, i32)* @ebc_c384_wdt_set_timeout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ebc_c384_wdt_set_timeout(%struct.watchdog_device* %0, i32 %1) #0 {
  %3 = alloca %struct.watchdog_device*, align 8
  %4 = alloca i32, align 4
  store %struct.watchdog_device* %0, %struct.watchdog_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ugt i32 %5, 255
  br i1 %6, label %7, label %14

7:                                                ; preds = %2
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @roundup(i32 %8, i32 60)
  %10 = load %struct.watchdog_device*, %struct.watchdog_device** %3, align 8
  %11 = getelementptr inbounds %struct.watchdog_device, %struct.watchdog_device* %10, i32 0, i32 0
  store i32 %9, i32* %11, align 4
  %12 = load i32, i32* @CFG_ADDR, align 4
  %13 = call i32 @outb(i32 0, i32 %12)
  br label %20

14:                                               ; preds = %2
  %15 = load i32, i32* %4, align 4
  %16 = load %struct.watchdog_device*, %struct.watchdog_device** %3, align 8
  %17 = getelementptr inbounds %struct.watchdog_device, %struct.watchdog_device* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 4
  %18 = load i32, i32* @CFG_ADDR, align 4
  %19 = call i32 @outb(i32 128, i32 %18)
  br label %20

20:                                               ; preds = %14, %7
  ret i32 0
}

declare dso_local i32 @roundup(i32, i32) #1

declare dso_local i32 @outb(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
